fixing text not centered

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,7 +36,6 @@ section::-webkit-scrollbar-thumb {
     input[type='number'] {
         -webkit-appearance: none;
         margin: 0;
-        appearance: textfield;
         -moz-appearance: textfield !important;
     }
 }
